<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/product_img"
        android:src="@drawable/kebab"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/img_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_kebab"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/img_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/TXTspinner_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/product_choose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_product"/>

        <Spinner
            android:id="@+id/spinner_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:contentDescription="@string/product_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TXTspinner_product" />

        <TextView
            android:id="@+id/TXT_productDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_desc"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_product"/>

        <TextView
            android:id="@+id/desc_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_chickenburger"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TXT_productDesc"/>

        <TextView
            android:id="@+id/desc_cheese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_cheese"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc_product"/>

        <ImageButton
            android:id="@+id/quantityDecrease"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:src="@drawable/ic_baseline_remove_24"
            android:background="@color/burgernezz_red"
            android:contentDescription="@string/btn_decrease"
            app:layout_constraintTop_toBottomOf="@id/desc_cheese"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/inputQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="20dp"
            android:text="@string/exaQuantity"
            android:textSize="40sp"
            app:layout_constraintTop_toBottomOf="@id/desc_cheese"
            app:layout_constraintStart_toEndOf="@id/quantityDecrease"/>

        <ImageButton
            android:id="@+id/quantityIncrease"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:src="@drawable/ic_baseline_add_24"
            android:background="@color/burgernezz_red"
            android:contentDescription="@string/btn_increase"
            app:layout_constraintTop_toBottomOf="@id/desc_cheese"
            app:layout_constraintStart_toEndOf="@id/inputQuantity"/>

        <TextView
            android:id="@+id/price_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/price_kebab"
            android:textSize="30sp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/quantityIncrease"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc_cheese"/>

        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:drawableStart="@drawable/ic_baseline_add_shopping_cart_white"
            android:text="@string/btn_order"
            android:textColor="#FFE082"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_product" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>