<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cartProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_chickenburger"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_alignParentStart="true"/>

        <ImageButton
            android:id="@+id/cartDecrease"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_below="@id/cartProduct"
            android:backgroundTint="@color/burgernezz_red"
            android:padding="20dp"
            android:contentDescription="@string/btn_decrease"
            android:src="@drawable/ic_baseline_remove_24" />

        <TextView
            android:id="@+id/cartQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/exaQuantity"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_below="@id/cartProduct"
            android:layout_toEndOf="@id/cartDecrease"/>

        <ImageButton
            android:id="@+id/cartIncrease"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/cartProduct"
            android:layout_toEndOf="@id/cartQuantity"
            android:backgroundTint="@color/burgernezz_red"
            android:padding="20dp"
            android:contentDescription="@string/btn_increase"
            android:src="@drawable/ic_baseline_add_24" />

        <TextView
            android:id="@+id/cartPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_kebab"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_below="@id/btn_removeone"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/btn_removeone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_deleteone"
            android:drawableStart="@drawable/ic_baseline_remove_shopping_cart_24"
            android:backgroundTint="@color/burgernezz_red"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>