<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/trackingProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_kebab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/trackingQuantity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trackingQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exaQuantity"
        app:layout_constraintStart_toEndOf="@+id/trackingProduct"
        app:layout_constraintEnd_toStartOf="@id/trackingPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trackingPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_kebab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/trackingQuantity"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>